# woshd

./: Cargo.toml  readme.md  x86_64-v7em.json
.cargo/: config.toml
script/windows/: run-in-qemu.bat  run.txt
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga.rs
